--- a/app/src/views/home.ejs
+++ b/app/src/views/home.ejs
@@ -45,9 +45,9 @@
         <dir class="div"></dir>
         <p>I design, code and deploy modern full stack web applications for everyone.</p>
         <div class="contact-icons">
-          <a target="_blank" href="https://github.com/rancan-nicolo"><img
+          <a target="_blank" href="https://github.com/nicolo-rancan"><img
               src="https://img.icons8.com/material-outlined/96/000000/github.png" /></a>
-          <a target="_blank" href="https://twitter.com/rnc_nicolo"><img
+          <a target="_blank" href="https://twitter.com/nicolo_rancan"><img
               src="https://img.icons8.com/android/96/000000/twitter.png" /></a>
           <a target="_blank" href="https://www.linkedin.com/in/nicol%C3%B2-rancan-055231208/"><img
               src="https://img.icons8.com/android/96/000000/linkedin.png" /></a>
@@ -195,12 +195,12 @@
         </div>
         <div class="sub-content inline">
           <div class="social">
-            <a target="_blank" href="https://github.com/rancan-nicolo"><img
+            <a target="_blank" href="https://github.com/nicolo-rancan"><img
                 src="https://img.icons8.com/material-outlined/96/000000/github.png" /></a>
             <p>GitHub</p>
           </div>
           <div class="social">
-            <a target="_blank" href="https://twitter.com/rnc_nicolo"><img
+            <a target="_blank" href="https://twitter.com/nicolo_rancan"><img
                 src="https://img.icons8.com/android/96/000000/twitter.png" /></a>
             <p>Twitter</p>
           </div>
