--- a/app/src/views/home.ejs
+++ b/app/src/views/home.ejs
@@ -16,6 +16,7 @@
     <div class="name">
       <h3 id="name">Nicolò</h3>
     </div>
+    <img onclick="toggleMenu()" src="https://img.icons8.com/ios-filled/48/000000/menu--v1.png"/>
     <div class="links">
       <ul>
         <li>
