--- a/app/src/views/home.ejs
+++ b/app/src/views/home.ejs
@@ -8,6 +8,7 @@
   <meta name="author" content="Rancan Nicolò" />
   <title>Home - Nicolò Rancan portfolio</title>
 
+  <link rel="icon" type="image/png" href="https://img.icons8.com/clouds/100/000000/r.png">
   <link rel="stylesheet" href="/style/home.css">
 </head>
 
