Added SEO keywords

--- a/app/src/views/home.ejs
+++ b/app/src/views/home.ejs
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Rancan Nicolò" />
+  <meta name="keywords" content="nicolò, nicolo, rancan, portfolio, developer, web, web developer, web dev, dev, code, contact, home, about, work, project">
   <title>Home - Nicolò Rancan portfolio</title>
 
   <link rel="icon" type="image/png" href="https://img.icons8.com/clouds/100/000000/r.png">
