Fixed SEO issues

--- a/app/src/views/home.ejs
+++ b/app/src/views/home.ejs
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Rancan Nicolò" />
+  <meta name="author" content="Nicolò Rancan" />
+  <meta name="description" content="Nicolò Rancan web developer portfolio.">
   <meta name="keywords" content="nicolò, nicolo, rancan, portfolio, developer, web, web developer, web dev, dev, code, contact, home, about, work, project">
   <title>Home - Nicolò Rancan portfolio</title>
 
@@ -18,7 +19,7 @@
     <div class="name">
       <h3 id="name">Nicolò</h3>
     </div>
-    <img onclick="toggleMenu()" src="https://img.icons8.com/ios-filled/48/000000/menu--v1.png"/>
+    <img onclick="toggleMenu()" src="https://img.icons8.com/ios-filled/48/000000/menu--v1.png" alt="menu"/>
     <div class="links">
       <ul>
         <li>
@@ -45,18 +46,23 @@
       <div class="content">
         <div class="pic"></div>
         <h1>Nicolò<br>Rancan</h1>
-        <dir class="div"></dir>
+        <div class="div"></div>
         <p>I design, code and deploy modern full stack web applications for everyone.</p>
         <div class="contact-icons">
-          <a target="_blank" href="https://github.com/nicolo-rancan"><img
+          <a rel="noreferrer" target="_blank" href="https://github.com/nicolo-rancan"><img
+            alt="github logo"
               src="https://img.icons8.com/material-outlined/96/000000/github.png" /></a>
-          <a target="_blank" href="https://twitter.com/nicolo_rancan"><img
+          <a rel="noreferrer" target="_blank" href="https://twitter.com/nicolo_rancan"><img
+            alt="twitter logo"
               src="https://img.icons8.com/android/96/000000/twitter.png" /></a>
-          <a target="_blank" href="https://www.linkedin.com/in/nicol%C3%B2-rancan-055231208/"><img
+          <a rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/nicol%C3%B2-rancan-055231208/"><img
+            alt="linkedin logo"
               src="https://img.icons8.com/android/96/000000/linkedin.png" /></a>
-          <a target="_blank" href="https://www.instagram.com/rancan_nicolo/"><img
+          <a rel="noreferrer" target="_blank" href="https://www.instagram.com/rancan_nicolo/"><img
+            alt="instagram logo"
               src="https://img.icons8.com/material/96/000000/instagram-new--v1.png" /></a>
-          <a target="_blank" href="mailto:nicolo.rancan.gm@gmail.com"><img
+          <a rel="noreferrer" target="_blank" href="mailto:nicolo.rancan.gm@gmail.com"><img
+            alt="email logo"
               src="https://img.icons8.com/material/96/000000/important-mail.png" /></a>
         </div>
       </div>
@@ -72,7 +78,7 @@
         </div>
         <div class="sub-content inline">
           <div class="left">
-            <img src="/resources/images/profile_edit.jpg" alt="profile_edit.jpg">
+            <img src="/resources/images/profile_edit.jpg" alt="profile image">
           </div>
           <div class="right">
             <h4>Hi, I am Nicolò</h4>
@@ -119,13 +125,13 @@
           <p>Those are some of my knowledges that I have decided to expose. The orange bars, indicates a self assesment
             of my understanding of the language. If you want to know more about my knowledges, please contact me.</p>
           <div class="sub-intestation">
-            <img title="HTML5" src="https://img.icons8.com/color/48/000000/html-5.png" />
-            <img title="CSS" src="https://img.icons8.com/color/48/000000/css3.png" />
-            <img title="JavaScript" src="https://img.icons8.com/color/48/000000/javascript.png" />
-            <img title="React" src="https://img.icons8.com/color/48/000000/react-native.png" />
-            <img title="Git" src="https://img.icons8.com/color/48/000000/git.png" />
-            <img title="NodeJS" src="https://img.icons8.com/color/48/000000/nodejs.png" />
-            <img title="C#" src="https://img.icons8.com/color/48/000000/c-sharp-logo.png" />
+            <img alt="html5 logo" title="HTML5" src="https://img.icons8.com/color/48/000000/html-5.png" />
+            <img alt="css logo" title="CSS" src="https://img.icons8.com/color/48/000000/css3.png" />
+            <img alt="javascript logo" title="JavaScript" src="https://img.icons8.com/color/48/000000/javascript.png" />
+            <img alt="react logo" title="React" src="https://img.icons8.com/color/48/000000/react-native.png" />
+            <img alt="git logo" title="Git" src="https://img.icons8.com/color/48/000000/git.png" />
+            <img alt="nodejs logo" title="NodeJS" src="https://img.icons8.com/color/48/000000/nodejs.png" />
+            <img alt="c# logo" title="C#" src="https://img.icons8.com/color/48/000000/c-sharp-logo.png" />
           </div>
         </div>
         <div id="knowledges-panel" class="sub-content inline">
@@ -150,7 +156,7 @@
                 <p>OverLegend is a minecraft network, for wich I have created this website that connect multiple
                   platforms, like Discord and Minecraft. I have coded everything, from the front-end, to the back-end
                   and configured the host machine.</p>
-                <a target="_blank" href="https://overlegend.it">Visit</a>
+                <a rel="noreferrer" target="_blank" href="https://overlegend.it">Visit</a>
               </div>
               <div class="tags">
                 <p>HTML</p>
@@ -162,7 +168,7 @@
               </div>
             </div>
             <div class="right">
-              <img src="/resources/images/ol-2.png" alt="overlegend.png">
+              <img alt="overlegend website image" src="/resources/images/ol-2.png" alt="overlegend.png">
             </div>
           </div>
           <di class="project swapped">
@@ -182,7 +188,7 @@
               </div>
             </div>
             <div class="right">
-              <img src="/resources/images/gi-1.png" alt="gamersita.png">
+              <img alt="gamersita website image" src="/resources/images/gi-1.png" alt="gamersita.png">
             </div>
         </div>
       </div>
@@ -198,27 +204,32 @@
         </div>
         <div class="sub-content inline">
           <div class="social">
-            <a target="_blank" href="https://github.com/nicolo-rancan"><img
+            <a rel="noreferrer" target="_blank" href="https://github.com/nicolo-rancan"><img
+                alt="github logo"
                 src="https://img.icons8.com/material-outlined/96/000000/github.png" /></a>
             <p>GitHub</p>
           </div>
           <div class="social">
-            <a target="_blank" href="https://twitter.com/nicolo_rancan"><img
+            <a rel="noreferrer" target="_blank" href="https://twitter.com/nicolo_rancan"><img
+              alt="twitter logo"
                 src="https://img.icons8.com/android/96/000000/twitter.png" /></a>
             <p>Twitter</p>
           </div>
           <div class="social">
-            <a target="_blank" href="https://www.linkedin.com/in/nicol%C3%B2-rancan-055231208/"><img
+            <a rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/nicol%C3%B2-rancan-055231208/"><img
+              alt="linkedin logo"
                 src="https://img.icons8.com/android/96/000000/linkedin.png" /></a>
             <p>Linkedin</p>
           </div>
           <div class="social">
-            <a target="_blank" href="https://www.instagram.com/rancan_nicolo/"><img
+            <a rel="noreferrer" target="_blank" href="https://www.instagram.com/rancan_nicolo/"><img
+              alt="instagram logo"
                 src="https://img.icons8.com/material/96/000000/instagram-new--v1.png" /></a>
             <p>Instagram</p>
           </div>
           <div class="social">
-            <a target="_blank" href="mailto:nicolo.rancan.gm@gmail.com"><img
+            <a rel="noreferrer" target="_blank" href="mailto:nicolo.rancan.gm@gmail.com"><img
+              alt="email logo"
                 src="https://img.icons8.com/material/96/000000/important-mail.png" /></a>
             <p>Mail</p>
           </div>
