Added WeatherApp in projects

--- a/app/src/views/home.ejs
+++ b/app/src/views/home.ejs
@@ -168,10 +168,10 @@
               </div>
             </div>
             <div class="right">
-              <img alt="overlegend website image" src="/resources/images/ol-2.png" alt="overlegend.png">
+              <img alt="overlegend website image" src="/resources/images/ol-2.png">
             </div>
           </div>
-          <di class="project swapped">
+          <div class="project swapped">
             <div class="left">
               <div class="desc">
                 <h3>Gamers ITA Community</h3>
@@ -188,8 +188,28 @@
               </div>
             </div>
             <div class="right">
-              <img alt="gamersita website image" src="/resources/images/gi-1.png" alt="gamersita.png">
+              <img alt="gamersita website image" src="/resources/images/gi-1.png">
             </div>
+        </div>
+        <div class="project">
+          <div class="left">
+            <div class="desc">
+              <h3>WeatherApp</h3>
+              <p>A simple, lightweight weather app that casts meteo within a 3 hours interval. This is a non-productive app, that is made with the OpenWeatherMap api</p>
+              <a rel="noreferrer" target="_blank" href="https://weather.nicolorancan.com">Visit</a>
+            </div>
+            <div class="tags">
+              <p>HTML</p>
+              <p>CSS</p>
+              <p>JavaScript</p>
+              <p>Ejs</p>
+              <p>Node.JS</p>
+              <p>OpenWeathermap</p>
+            </div>
+          </div>
+          <div class="right">
+            <img alt="weatherapp image" src="/resources/images/wt-1.png">
+          </div>
         </div>
       </div>
     </div>
