--- a/app/src/views/home.ejs
+++ b/app/src/views/home.ejs
@@ -78,7 +78,7 @@
         </div>
         <div class="sub-content inline">
           <div class="left">
-            <img src="/resources/images/profile_edit.jpg" alt="profile image">
+            <img src="/resources/images/profile_edit.webp" alt="profile image">
           </div>
           <div class="right">
             <h4>Hi, I am Nicolò</h4>
@@ -168,7 +168,7 @@
               </div>
             </div>
             <div class="right">
-              <img alt="overlegend website image" src="/resources/images/ol-2.png">
+              <img alt="overlegend website image" src="/resources/images/ol-2.webp">
             </div>
           </div>
           <div class="project swapped">
@@ -188,7 +188,7 @@
               </div>
             </div>
             <div class="right">
-              <img alt="gamersita website image" src="/resources/images/gi-1.png">
+              <img alt="gamersita website image" src="/resources/images/gi-1.webp">
             </div>
         </div>
         <div class="project">
@@ -208,7 +208,7 @@
             </div>
           </div>
           <div class="right">
-            <img alt="weatherapp image" src="/resources/images/wt-1.png">
+            <img alt="weatherapp image" src="/resources/images/wt-1.webp">
           </div>
         </div>
       </div>
